--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Everdell Scoring App</title>
     <link href="/src/assets/styles/tailwind.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100">
-    <div id="app"></div>
+<body class="h-full w-full font-sans text-gray-900 antialiased">
+    <div class="h-full w-full" id="app"></div>
     <script src="/src/main.ts" type="module"></script>
 </body>
 </html>
